objects/SubExpo__c.object
<CustomObject>
    <fields>
        <fullName>A2Z_SubExpoID__c</fullName>
        <externalId>true</externalId>
        <label>A2Z SubExpoID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Event_Code__c</fullName>
        <formula>Event__r.Event_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>SubExpos</relationshipLabel>
        <relationshipName>SubExpos</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Show_Date__c</fullName>
        <label>Last Show Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <formula>Event__r.Show__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Date__c</fullName>
        <label>Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubShowName__c</fullName>
        <formula>SubShow__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubShowName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubShow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubShow</label>
        <referenceTo>SubShow__c</referenceTo>
        <relationshipLabel>SubExpos</relationshipLabel>
        <relationshipName>SubExpos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Booth_Revenue__c</fullName>
        <label>Target Booth Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Digital_Revenue__c</fullName>
        <label>Target Digital Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_List_Rental_Revenue__c</fullName>
        <label>Target List Rental Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_NSF__c</fullName>
        <label>Target NSF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Other_Revenue__c</fullName>
        <label>Target Other Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Print_Revenue__c</fullName>
        <label>Target Print Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Sponsorship_Revenue__c</fullName>
        <label>Target Sponsorship Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>SubExpo</label>
    <nameField>
        <label>SubExpo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SubExpos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>